refactor: remove v2 related code and simplify project structure
- Remove v2 codebase and related files
- Update .gitignore to remove v2 references
- Rename v3 package to tabtoy
- Update file paths and package imports accordingly

--- a/.gitignore
+++ b/.gitignore
@@ -7,16 +7,16 @@
 *.suo
 *.user
 *~
-v3/example/lua/*.dll
-v3/example/csharp/.vs
-v3/example/csharp/TabtoyExample/obj
-v3/example/csharp/TabtoyExample/bin
-v3/example/java/.gradle
-v3/example/java/.idea
-v3/example/java/build
-v3/example/java/.project
-v3/example/java/.settings/org.eclipse.buildship.core.prefs
-v3/example/binary/*.bin
+example/lua/*.dll
+example/csharp/.vs
+example/csharp/TabtoyExample/obj
+example/csharp/TabtoyExample/bin
+example/java/.gradle
+example/java/.idea
+example/java/build
+example/java/.project
+example/java/.settings/org.eclipse.buildship.core.prefs
+example/binary/*.bin
 *.zip
 *.gz
 tabtoy
@@ -25,3 +25,4 @@ tabtoy
 *.DS_Store
 protoc
 ~*.xlsx
+*.idea
